--- a/src/Components/navbar.css
+++ b/src/Components/navbar.css
@@ -8,7 +8,7 @@
     min-width: 1280px;
     font-size: larger;
     text-align: center;
-    z-index: 0;
+    z-index: 100;
 }
 
 .header div:not(div.transferItems):hover{
@@ -65,7 +65,7 @@
 }
 
 .message{
-    background: #fde073;
+    background: #2ed44a;
     text-align: center;
     line-height: 2.5;
     border: 5px solid black;
